// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CamperPricesCard component tests matches snapshot 1`] = `
<div
  className="van-details__sticky-card"
>
  <div
    className="van-details__sticky-card-header"
  >
    <div>
      <p
        className="text-title in-white"
      >
        campervanMake
      </p>
      <p
        className="van-details__sticky-card-header-txt mb-4"
      >
        campervanModel
      </p>
      <div
        className="d-flex align-items-center"
      >
        <i
          className="icon icon-flash-f mr-8 in-yellow-1000"
        />
        <p
          className="text-title in-white"
        >
          $566
          <span
            className="van-details__sticky-card-header-txt font-12 font-400"
          >
             / night
          </span>
        </p>
      </div>
    </div>
    <div
      className="van-details__sticky-card-header-img"
    >
      <img
        alt=""
        src="mainPhotoUrl"
      />
    </div>
  </div>
  <div
    className="van-details__sticky-card-body"
  >
    <DepartureReturnWidget
      popupClasses="departure-return__calendar-widget"
      showClearButton={false}
      showPairMonth={true}
      wrapperClasses="mb-16"
    />
    <div
      className="d-flex align-items-center justify-content-space-between mb-16"
    >
      <div
        className="d-flex align-items-center"
      >
        $222 x 2 night
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          overlayClassName="main-tooltip"
          placement="top"
          trigger={
            Array [
              "hover",
              "click",
            ]
          }
        >
          <i
            className="icon main-tooltip-icon icon-info-f"
          />
        </Tooltip>
      </div>
      <span>
        $222
      </span>
    </div>
    <div
      className="d-flex align-items-center justify-content-space-between"
    >
      <a
        className="main-link"
        href=""
        onClick={[MockFunction]}
      >
        <Memo(FormattedMessage)
          id="shared.ownerFeesAndProcessing"
        />
      </a>
      <span>
        $222
      </span>
    </div>
    0
    <BtnGradient
      className="w-100"
      isLoading={false}
      size="large"
      text={
        <Memo(FormattedMessage)
          id="shared.instantBook"
        />
      }
    />
  </div>
</div>
`;

exports[`CamperPricesCard component tests matches snapshot when is fetching 1`] = `
<div
  className="van-details__sticky-card"
>
  <div
    className="van-details__sticky-card-header"
  >
    <div>
      <p
        className="text-title in-white"
      >
        campervanMake
      </p>
      <p
        className="van-details__sticky-card-header-txt mb-4"
      >
        campervanModel
      </p>
      <div
        className="d-flex align-items-center"
      >
        <i
          className="icon icon-flash-f mr-8 in-yellow-1000"
        />
        <p
          className="text-title in-white"
        >
          $566
          <span
            className="van-details__sticky-card-header-txt font-12 font-400"
          >
             / night
          </span>
        </p>
      </div>
    </div>
    <div
      className="van-details__sticky-card-header-img"
    >
      <img
        alt=""
        src="mainPhotoUrl"
      />
    </div>
  </div>
  <div
    className="van-details__sticky-card-body"
  >
    <DepartureReturnWidget
      popupClasses="departure-return__calendar-widget"
      showClearButton={false}
      showPairMonth={true}
      wrapperClasses="mb-16"
    />
    <SkeletonText
      rows={2}
    />
    <Divider
      className="mt-16 mb-16"
    />
    <SkeletonTitle
      className="h-20"
      width={100}
    />
    <SkeletonTitle
      className="mb-0"
      width={100}
    />
  </div>
</div>
`;
